(rule
 (targets ex01.c.exe)
 (deps (:provision provision))
 (action (progn (run %{exe:../bin/caravan.exe} -i %{exe:../example/ex01.exe} -p %{provision} %{targets}) (run chmod +x ex01.c.exe))))

(rule
 (targets result.output)
 (deps %{exe:ex01.c.exe})
 (action (with-stdout-to result.output (run %{exe:ex01.c.exe}))))

(rule
 (alias runtest)
 (deps (:output result.output) (:expected result.expected))
 (action (diff %{output} %{expected})))
